[package]
name = "actix-web-auth"
version = "0.1.0"
edition = "2021"
description = "actix web http authorization middleware"
license-file = "LICENSE"
documentation = "https://docs.rs/actix-web-auth"
homepage = "https://github.com/nashaofu/actix-web-auth"
repository = "https://github.com/nashaofu/actix-web-auth.git"
keywords = ["actix", "web", "http", "auth", "basic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-utils = "3.0"
actix-web = { version = "4.3", default-features = false }
base64 = "0.21"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
pin-project-lite = "0.2"

[dev-dependencies]
actix-cors = "0.6"
actix-service = "2.0"
actix-web = { version = "4.3", default-features = false, features = ["macros"] }
